# backend/src/modules/stays/dto/stays-list-response.dto.ts
@@ -1,0 +1,19 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { StayListItemDto } from './stay-list-item.dto';
+
+export class StaysListResponseDto {
+  @ApiProperty({
+    type: [StayListItemDto],
+    description: 'Список заездов',
+  })
+  items: StayListItemDto[];
+
+  @ApiProperty({ description: 'Всего записей' })
+  total: number;
+
+  @ApiProperty({ description: 'Номер страницы' })
+  page: number;
+
+  @ApiProperty({ description: 'Количество на странице' })
+  limit: number;
+}
